<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.kazakova_net.myaudiobookshelf.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/currently_listening_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_menu_item_bg_descr"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pic_main_menu_item_1" />

        <TextView
            style="@style/MainMenuItemText"
            android:text="@string/currently_listening" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shelved_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_menu_item_bg_descr"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pic_main_menu_item_2" />

        <TextView
            style="@style/MainMenuItemText"
            android:text="@string/shelved" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/archive_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_menu_item_bg_descr"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pic_main_menu_item_3" />

        <TextView
            style="@style/MainMenuItemText"
            android:text="@string/archive" />
    </RelativeLayout>

</LinearLayout>
