<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.kazakova_net.myaudiobookshelf.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picture_image_view"
            style="@style/DetailViewPicture"
            android:contentDescription="@string/book_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pic_1" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/DetailViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view"
            tools:text="Gradle for Android" />

        <TextView
            android:id="@+id/author_text_view"
            style="@style/DetailViewAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            tools:text="Kevin Pelgrims" />

        <TextView
            android:id="@+id/genre_text_view"
            style="@style/DetailViewGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_text_view"
            tools:text="Computers &amp; Technology" />

        <TextView
            android:id="@+id/year_text_view"
            style="@style/DetailViewYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_text_view"
            tools:text="2015" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/DetailViewDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_text_view"
            tools:text="One of the most inspiring and impactful books ever written, The 7 Habits of Highly Effective People has captivated readers for 25 years. It has transformed the lives of Presidents and CEOs, educators and parents— in short, millions of people of all ages and occupations." />

        <TextView
            android:id="@+id/play_text_view"
            style="@style/DetailViewPlay"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

        <TextView
            android:id="@+id/home_text_view"
            style="@style/DetailViewHome"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

